updated first section

--- a/index.html
+++ b/index.html
@@ -95,8 +95,15 @@
                         <div class="col-lg-5 col-sm-6">
                             <hr class="section-heading-spacer">
                             <div class="clearfix"></div>
-                            <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                            <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                            <h2 class="section-heading">2018 Northwest US & Western Canada Christians Conference</h2>
+
+
+                            <p class="lead">Friday, July 27 – Sunday, July 29, 2018<br/>
+                            Spokane Convention Center, east campus – Spokane, Washington, USA<br/>
+
+                            Spokane Convention Center<br/>
+                            334 W Spokane Falls Blvd, Spokane, WA 99201<br/>
+                            http://spokanecenter.com/directions-and-parking/</p>
                         </div>
                         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                             <img class="img-responsive" src="img/ipad.png" alt="">
